Add new AlleleData class to encapsulate building AlleleProto.Frequency and AlleleProto.PathogenicityScore instances Update Allele and AlleleParsers to use new AlleleData